# LowMath

./: CMakeLists.txt  main.cpp
include/LowMath/matrix/: Matrix.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h
include/LowMath/quaternion/: Quaternion.h
include/LowMath/type/: ApiType.h
include/LowMath/utils/for_api/: projection_api.h
include/LowMath/utils/native/opengl/: projection_opengl.h
include/LowMath/vector/: Vector.h  Vector2.h  Vector3.h  Vector4.h
include/lowmath/: lowmath.h
include/lowmath/matrix/: Matrix.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h
include/lowmath/quaternion/: Quaternion.h
include/lowmath/vector/: Vector.h  Vector2.h  Vector3.h  Vector4.h
source/matrix/: Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp
source/quaternion/: Quaternion.cpp
source/utils/native/opengl/: projection_opengl.cpp
source/vector/: Vector2.cpp  Vector3.cpp  Vector4.cpp
